namespace Application.RepoInterfaces;

public interface IStoryRepository
{
    GameData LoadStoryData();
}
