@startuml StoryServices
skinparam classAttributeIconSize 0
skinparam direction top to bottom
skinparam class {
  BackgroundColor #FFF9E6
  BorderColor #333333
  ArrowColor #333333
}

title Application Layer - Story Services

interface IStoryRepository <<Application>> {
  + LoadStoryData(): GameData
}

interface IStoryService {
  + InitializeStory(command: string)
  + GetCurrentLocation(): LocationData
  + ShouldPlayNarrative(): bool
  + MarkNarrativeAsPlayed()
  + Move(forward: bool): string
  + HealTeamAtCenter(): string
  + ExploreWildArea(): (bool, string, Pokemon?, Item?)
  + TryChallengeGym(): (bool, string, NpcData?, List<Pokemon>?)
  + TryChallengePokemonLeague(boss: NpcData): (bool, string, List<Pokemon>?)
  + TryChallengeTrainer(trainer: NpcData): (bool, string, List<Pokemon>?)
  + GiveStarter(starterName: string): (bool, string)
}

class StoryService <<Application>> {
  - _gameSession: GameSession
  - _pokemonSpawner: PokemonSpawner
  - _itemSpawner: ItemSpawner
  - _gameData: GameData
  + StoryService(session, pokeSpawner, itemSpawner, storyRepo: IStoryRepository)
  + InitializeStory(command: string)
  + GetCurrentLocation(): LocationData
  + ShouldPlayNarrative(): bool
  + MarkNarrativeAsPlayed()
  + Move(forward: bool): string
  + HealTeamAtCenter(): string
  + ExploreWildArea(): (bool, string, Pokemon?, Item?)
  + TryChallengeGym(): (bool, string, NpcData?, List<Pokemon>?)
  + TryChallengePokemonLeague(boss: NpcData): (bool, string, List<Pokemon>?)
  + TryChallengeTrainer(trainer: NpcData): (bool, string, List<Pokemon>?)
  + GiveStarter(starterName: string): (bool, string)
}

class MySqlStoryService <<Infrastructure>> {
  - _gameSession: GameSession
  - _pokemonSpawner: PokemonSpawner
  - _itemSpawner: ItemSpawner
  - _dbConnection: string
  ' Same methods as StoryService (implements IStoryService)
}

' Relationships
StoryService ..|> IStoryService
MySqlStoryService ..|> IStoryService
StoryService --> GameSession
StoryService --> PokemonSpawner
StoryService --> ItemSpawner
StoryService --> IStoryRepository
MySqlStoryService --> GameSession

@enduml</content>
<parameter name="filePath">c:\C#\PokemonConsole\TurnBasedPokemon\Diagram\ClassDiagram\StoryServices.puml